[package]
name = "offsetscan"
version = "0.1.4"
edition = "2021"
authors = ["DreadHost Research"]
description = "Standalone native corpus-scale engine for PE parsing, entropy, string extraction, and IOC panels — schema-compatible with OffsetInspect.Result/ThreatScanResult JSON output."
license = "MIT"
repository = "https://github.com/warpedatom/OffsetScan"
readme = "README.md"
keywords = ["malware", "forensics", "pe", "entropy", "security"]
categories = ["command-line-utilities", "parser-implementations"]

[[bin]]
name = "offsetscan"
path = "src/main.rs"

[dependencies]
# PE parsing (headers, sections, imports, imphash-equivalent, overlay detection)
goblin = "0.8"
# CLI arg parsing
clap = { version = "4", features = ["derive"] }
# JSON output matching OffsetInspect.Result / ThreatScanResult schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Hashing for MD5/SHA-1/SHA-256 (matches Get-OffsetIOC's single-pass hash set)
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
# Parallel corpus scanning (thousands of files) — the actual perf payoff over PowerShell
rayon = "1"
# Directory/wildcard expansion, matching Invoke-OffsetThreatScanBatch's file-discovery semantics
walkdir = "2"
glob = "0.3"
# CSV output for the ioc panel (flat, analyst-friendly, one row per file)
csv = "1"
# Timestamps in ISO 8601 to match ThreatScanResult's UTC scan timestamp field
chrono = { version = "0.4", features = ["serde"] }

[dependencies.yara]
version = "0.28"
optional = true

[features]
default = []
yara-scan = ["dep:yara"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
